--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,6 +1,4 @@
-specVersion: 1.0.0
-indexerHints:
-  prune: auto
+specVersion: 1.2.0
 schema:
   file: ./schema.graphql
 dataSources:
@@ -10,29 +8,50 @@ dataSources:
     source:
       address: "0xf6f09e56b96aa3c9a2cb2cb277eb523c72336120"
       abi: OldBridge
-      startBlock: 15413149
+      startBlock: 12526508
+      # endBlock: 15447144
     mapping:
       kind: ethereum/events
-      apiVersion: 0.0.7
+      apiVersion: 0.0.9
       language: wasm/assemblyscript
       entities:
         - BridgeCallTriggered
-        - InboxToggle
         - MessageDelivered
-        - OutboxToggle
-        - OwnershipTransferred
       abis:
         - name: OldBridge
           file: ./abis/OldBridge.json
       eventHandlers:
         - event: BridgeCallTriggered(indexed address,indexed address,uint256,bytes)
           handler: handleBridgeCallTriggered
-        - event: InboxToggle(indexed address,bool)
-          handler: handleInboxToggle
         - event: MessageDelivered(indexed uint256,indexed bytes32,address,uint8,address,bytes32)
           handler: handleMessageDelivered
-        - event: OutboxToggle(indexed address,bool)
-          handler: handleOutboxToggle
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
       file: ./src/old-bridge.ts
+  - kind: ethereum
+    name: Inbox
+    network: mainnet
+    source:
+      address: "0x5aed5f8a1e3607476f1f81c3d8fe126deb0afe94"
+      abi: Inbox
+      startBlock: 12526508
+      # endBlock: 15447144
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.9
+      language: wasm/assemblyscript
+      entities:
+        - InboxMessageDelivered
+        - InboxMessageDeliveredFromOrigin
+        - DepositEthCall
+        - BridgeTransfer
+      abis:
+        - name: Inbox
+          file: ./abis/Inbox.json
+      eventHandlers:
+        - event: InboxMessageDelivered(indexed uint256,bytes)
+          handler: handleInboxMessageDelivered
+        - event: InboxMessageDeliveredFromOrigin(indexed uint256)
+          handler: handleInboxMessageDeliveredFromOrigin
+      callHandlers:
+        - function: depositEth()
+          handler: handleDepositETH
+      file: ./src/inbox.ts
